--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     <div id="container">
       <img id="logo-img" src="./images/logo.svg" alt="logo" />
       <div id="subscribe-container">
-        <h1 class="soon-text">
+        <span class="soon-text">
           We are launching
           <p id="soon" class="soon-text">soon!</p>
-        </h1>
+        </span>
         <p id="sub-and-not-text">Subscribe and get notified</p>
         <div id="input-container">
           <input
